# learnc

./: .gitignore  README.md  hello.c
lab10/: README.md  functions.c  main.c  point.h
lab12/: README.md  main.c  warehouse.h
lab13/: CMakeLists.txt  Makefile  README.md
lab13/src/: warehouse.c
lab14/: README.md  main.c
lab15/: README.md  main.c  staff.csv
lab15.5/: README.md  task1.c  task2.c  task3.c  task4.c  task5.c  task_star.c
lab16/: 3task1-2.c  3task5.c  4task9  4task9.c  4task9.py  Makefile  README.md  test.cpp
lab16/src/: 3task3.c  3task4.c  3task6.c  4task7.c  4task8.c
lab17/: CMakeLists.txt  README.md
lab17/src/: calculator.cpp  calculator.h  main.cpp
lab17/tests/: test_calculator.cpp
lab18/: CMakeLists.txt  README.md
lab18/src/: main.cpp  paint_core.cpp  paint_core.hpp
lab9/: README.md  mergesort.py  sort.c
